--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/check": "^0.5.10",
     "@astrojs/preact": "^3.2.0",
     "@astrojs/tailwind": "^5.1.0",
+    "@fontsource/caveat-brush": "^5.0.13",
     "astro": "^4.7.0",
     "preact": "^10.21.0",
     "tailwindcss": "^3.4.3",
