--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@astrojs/check": "^0.5.10",
     "@astrojs/react": "^3.3.1",
     "@astrojs/tailwind": "^5.1.0",
+    "@fontsource-variable/caveat": "^5.0.18",
     "@fontsource/caveat-brush": "^5.0.13",
+    "@fontsource/montserrat-alternates": "^5.0.13",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
     "astro": "^4.7.0",
